# CuteOksa

./: Board.qml  CMakeLists.txt  HeartBackground.qml  HeartImage.qml  HeartPanel.qml  HeartSmallPanel.qml  HeartSmallPanelOpt.qml  HeartSquareBackground.qml  JuryPanel.qml  Main.qml  README.md  Scoreboard.qml  Wizard.qml  main.cpp  res.qrc  scoreactor.cpp  scoreactor.h  scoremodel.cpp  scoremodel.h
res/: score.json
